# libaaruformat

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake-modules/: FindLibreSSL.cmake
docs/: Specification.fodt
docs/versions/: AaruFormat Specification v1.0.pdf.asc
include/: aaru.h  aaruformat.h  dic.h  dicformat.h
include/aaruformat/: consts.h  context.h  crc64.h  decls.h  endian.h  enums.h  errors.h  flac.h  lru.h  simd.h  spamsum.h  structs.h
include/dicformat/: consts.h  context.h  decls.h  enums.h  errors.h  structs.h
src/: close.c  crc64.c  cst.c  ecc_cd.c  flac.c  helpers.c  identify.c  lru.c  lzma.c  open.c  read.c  simd.c  spamsum.c  verify.c
src/crc64/: arm_vmull.c  arm_vmull.h  crc64.c  crc64_clmul.c  crc64_vmull.c
templates/: aaruformat.bt  aaruformat.hexpat
tests/: CMakeLists.txt  crc32.c  crc32.h  crc64.cpp  flac.cpp  lzma.cpp  sha256.cpp  spamsum.cpp
tests/data/: random
tool/: CMakeLists.txt  aaruformattool.h  ecc_cd.c  helpers.c  identify.c  info.c  main.c  main.h  printhex.c  read.c  verify.c
